--- a/finance_accounting/index.html
+++ b/finance_accounting/index.html
@@ -51,18 +51,21 @@
 					<p class="history_title">История</p>
 					<p class="plug"></p>
 				</div>
-				<div class="history_note"> <!-- убрать -->
-					<img class="category_icon" src="" alt="category">
-					<p class="note_title">пальто из шерсти бобра</p>
-					<p class="note_cost">-300Р</p>
-				</div> <!-- убрать -->
+				<div class="history_note__fieldset">
+					<div class="history_note"> <!-- убрать -->
+						<img class="category_icon" src="" alt="">
+						<p class="note_title">пальто из шерсти бобра</p>
+						<p class="note_cost">-300Р</p>
+					</div> <!-- убрать -->
+				</div>
 			</div>
 		</div>
     </main>
 
-	<div class="popup popup_type_new_transaction">
-		<div class="popup__content popup__content_new_transaction">
+	<div class="popup popup_type_new_transaction popup_closed">
+		<div class="popup__content popup__content_new_transaction" id="newNoteForm">
 			<h1 class="popup__title">Добавить операцию</h1>
+			
 			<div class="popup__new-transaction-data">
 				<div class="new-transaction-data__form form-summ">
 					<h2 class="new-transaction-data__title">Сумма</h2>
@@ -72,7 +75,7 @@
 						<button type="button" name="expense" class="form-summ__choose-button"></button>
 					</div>
 
-					<input type="text" name="transaction-summ" placeholder="100 &#x20bd;" class="form__item form__item-summ">
+					<input type="number" step="100" name="transaction-summ" id="ammount-of-money" placeholder="100 &#x20bd;" class="form__item form__item-summ">
 				</div>
 
 				<div class="new-transaction-data__form form-date">
@@ -80,14 +83,14 @@
 
 					<!-- todo: ежедневно обновляющаяся плейсхолдер дата (js) -->
 					<!-- todo: красивый значок календаря -->
-					<input type="date" name="transaction-date" placeholder="MM/DD/YYYY" class="form__item form__item-date">
+					<input type="date" name="transaction-date"  id="date-of-transaction" placeholder="YYYY/MM/DD" class="form__item form__item-date">
 				</div>
 
 				<div class="new-transaction-data__form form-category">
 					<h2 class="new-transaction-data__title">Категория</h2>
 
 					<!-- todo: красивая дропдаун стрелочка (можно сделать чтобы разворачивалась на 180 при открытии формы) -->
-					<select class="form__item form__item-category" name="transaction-category">
+					<select class="form__item form__item-category" name="transaction-category" id="type-of-transaction">
 						<option value="fastfood">Фастфуд</option>
 						<option value="clothes_shoes">Одежда и обувь</option>
 						<option value="restaurant">Рестораны</option>
@@ -98,36 +101,29 @@
 				<div class="new-transaction-data__form form-note">
 					<h2 class="new-transaction-data__title">Комментарий</h2>
 
-					<input type="text" name="transaction-note" placeholder="Пометки для быстрого поиска. Например: аванс" class="form__item form__item-note">
+					<input type="text" name="transaction-note" id="note-of-transaction" placeholder="Пометки для быстрого поиска. Например: аванс" class="form__item form__item-note">
 				</div>
 
 				<div class="new-transaction-data__form form-place">
 					<h2 class="new-transaction-data__title">Место</h2>
 
-					<input type="text" name="transaction-place" placeholder="Унифуд" class="form__item form__item-place">
+					<input type="text" name="transaction-place" id="place-of-transaction" placeholder="Унифуд" class="form__item form__item-place">
 				</div>
 			</div>
 
 			<div class="popup_close">
 				<button type="button" name="cancel" class="popup_close__buton">Отмена</button>
-				<button type="button" name="add" class="popup_close__buton">Сохранить</button>
+				<button type="submit" name="add" class="popup_close__buton">Сохранить</button>
 			</div>
 		</div>
 	</div>
-	<template class="note_template">
+	<template id="note-template">
 		<div class="history_note">
 			<img class="category_icon" src="" alt="">
 			<p class="note_title"></p>
 			<p class="note_cost"></p>
 		</div>
 	</template>
-	<script>
-		if (localStorage.getItem("user") === null) {
-			window.location.href = "/login";
-		}
-		user = JSON.parse(localStorage.getItem("user"));
-		console.log(user);
-		document.querySelector(".header_username").textContent = user.name;
-	</script>
+	<script src="./scripts/index.js"></script>
 </body>
 </html>
