--- a/finance_accounting/index.html
+++ b/finance_accounting/index.html
@@ -148,6 +148,7 @@
 			<img class="category_icon" src="" alt="">
 			<p class="note_title"></p>
 			<p class="note_cost"></p>
+			<p class="note_id"></p>
 		</div>
 	</template>
 	<script src="./scripts/index.js"></script>
