--- a/finance_accounting/index.html
+++ b/finance_accounting/index.html
@@ -143,7 +143,7 @@
 		</div>
 	</div>
 
-	<div class="popup popup_type_edit_profile popup_opened">
+	<div class="popup popup_type_edit_profile popup_closed">
 		<div class="popup__content popup__content_edit_profile" id="editProfileForm">
 			<h1 class="popup__title">Изменить<br>Профиль</h1>
 			
