--- a/finance_accounting/index.html
+++ b/finance_accounting/index.html
@@ -35,13 +35,13 @@
 					<p class="expenses_months"></p>
 					<div class="stats_categories">
 						<div class="stats_category">
-							<p class="category_element">Фастфуд 5000 Р</p>
+							<p class="category_element"></p>
 						</div>
 						<div class="stats_category">
-							<p class="category_element">Гойда 15 Р</p>
+							<p class="category_element"></p>
 						</div>
 						<div class="stats_category">
-							<p class="category_element">Унифуд 9999 Р</p>
+							<p class="category_element"></p>
 						</div>
 					</div>
 				</div>
